--- a/catalog/view/theme/helium/template/extension/total/coupon.twig
+++ b/catalog/view/theme/helium/template/extension/total/coupon.twig
@@ -1,43 +1,44 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h4 class="panel-title">
-		<a href="#collapse-coupon" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
-  </div>
-  <div id="collapse-coupon" class="panel-collapse collapse">
+<details>
+  <summary><h4>{{ heading_title }}</h4></summary>
+  <div class="form-group">
     <label for="input-coupon">{{ entry_coupon }}</label>
     <div class="input-group">
       <input type="text" name="coupon" value="{{ coupon }}" placeholder="{{ entry_coupon }}" id="input-coupon" />
-      <button type="button" title="{{ button_coupon }}" id="button-coupon"  class="primary">{{ button_coupon }}</button>
+      <button type="button" title="{{ button_coupon }}" id="button-coupon"  class="primary">{{ ok }}</button>
     </div>
-  </div>
-</div>
-      <script type="text/javascript"><!--
-$('#button-coupon').on('click', function() {
-	$.ajax({
-		url: 'index.php?route=extension/total/coupon/coupon',
-		type: 'post',
-		data: 'coupon=' + encodeURIComponent($('input[name=\'coupon\']').val()),
-		dataType: 'json',
-		beforeSend: function() {
-		},
-		complete: function() {
-		},
-		success: function(json) {
-			$('.alert-dismissible').remove();
+	<span>{{ entry_coupon }}</span>
+	</div>
+</details>
 
-			if (json['error']) {
-				$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
 
-				$('html, body').animate({ scrollTop: 0 }, 'slow');
-			}
+      <script type="text/javascript">
+	//   <!--
+// $('#button-coupon').on('click', function() {
+// 	$.ajax({
+// 		url: 'index.php?route=extension/total/coupon/coupon',
+// 		type: 'post',
+// 		data: 'coupon=' + encodeURIComponent($('input[name=\'coupon\']').val()),
+// 		dataType: 'json',
+// 		beforeSend: function() {
+// 		},
+// 		complete: function() {
+// 		},
+// 		success: function(json) {
+// 			$('.alert-dismissible').remove();
 
-			if (json['redirect']) {
-				location = json['redirect'];
-			}
-		},
-		error: function(xhr, ajaxOptions, thrownError) {
-			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-		}
-	});
-});
+// 			if (json['error']) {
+// 				$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+
+// 				$('html, body').animate({ scrollTop: 0 }, 'slow');
+// 			}
+
+// 			if (json['redirect']) {
+// 				location = json['redirect'];
+// 			}
+// 		},
+// 		error: function(xhr, ajaxOptions, thrownError) {
+// 			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+// 		}
+// 	});
+// });
 //--></script>
