--- a/catalog/view/theme/helium/template/extension/total/reward.twig
+++ b/catalog/view/theme/helium/template/extension/total/reward.twig
@@ -1,47 +1,46 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h4 class="panel-title"><a href="#collapse-reward" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
-  </div>
-  <div id="collapse-reward" class="panel-collapse collapse">
-    <div class="panel-body">
-      <label for="input-reward">{{ entry_reward }}</label>
-      <div class="input-group">
-        <input type="text" name="reward" value="{{ reward }}" placeholder="{{ entry_reward }}" id="input-reward" />
-        <span class="input-group-btn">
-        <button type="submit" id="button-reward" class="primary">{{ button_reward }}</button>
-        </span></div>
+<details aria-labelledby="reward" class="panel panel-default">
+  	<summary class="panel-heading"><h4 id="reward">{{ heading_title }}</h4></summary>
+  	<div class="form-group">
+		<label for="input-reward">{{ entry_reward }}</label>
+		<div class="input-group">
+			<input type="text" name="reward" value="{{ reward }}" placeholder="{{ entry_reward }}" id="input-reward" />
+			<button type="submit" id="button-reward" class="primary">{{ ok }}</button>
+		</div>
+		<span>{{ entry_reward }}</span>
+	</div>
+</details>
+
+
+
       <script type="text/javascript"><!--
-$('#button-reward').on('click', function() {
-	$.ajax({
-		url: 'index.php?route=extension/total/reward/reward',
-		type: 'post',
-		data: 'reward=' + encodeURIComponent($('input[name=\'reward\']').val()),
-		dataType: 'json',
-		beforeSend: function() {
-			$('#button-reward').button('loading');
-		},
-		complete: function() {
-			$('#button-reward').button('reset');
-		},
-		success: function(json) {
-			$('.alert-dismissible').remove();
+// $('#button-reward').on('click', function() {
+// 	$.ajax({
+// 		url: 'index.php?route=extension/total/reward/reward',
+// 		type: 'post',
+// 		data: 'reward=' + encodeURIComponent($('input[name=\'reward\']').val()),
+// 		dataType: 'json',
+// 		beforeSend: function() {
+// 			$('#button-reward').button('loading');
+// 		},
+// 		complete: function() {
+// 			$('#button-reward').button('reset');
+// 		},
+// 		success: function(json) {
+// 			$('.alert-dismissible').remove();
 
-			if (json['error']) {
-				$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+// 			if (json['error']) {
+// 				$('.breadcrumb').after('<div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> ' + json['error'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
 
-				$('html, body').animate({ scrollTop: 0 }, 'slow');
-			}
+// 				$('html, body').animate({ scrollTop: 0 }, 'slow');
+// 			}
 
-			if (json['redirect']) {
-				location = json['redirect'];
-			}
-		},
-		error: function(xhr, ajaxOptions, thrownError) {
-			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-		}
-	});
-});
+// 			if (json['redirect']) {
+// 				location = json['redirect'];
+// 			}
+// 		},
+// 		error: function(xhr, ajaxOptions, thrownError) {
+// 			alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+// 		}
+// 	});
+// });
 //--></script>
-    </div>
-  </div>
-</div>
