--- a/catalog/view/theme/helium/template/checkout/guest.twig
+++ b/catalog/view/theme/helium/template/checkout/guest.twig
@@ -1,6 +1,6 @@
 
   <!-- Guest checkout -->
-  <form action="index.php?route=checkout/guest/save" method="post" id="guest_checkout">
+  <form action="index.php?route=checkout/guest/save" method="post" id="guest_checkout" class="grid">
     <fieldset id="account">
       <legend>{{ text_your_details }}</legend>
       <div class="form-group" {% if customer_groups|length <= 1 %} style="display: none" tabindex="-1"{% endif %}>
@@ -162,7 +162,6 @@
           {% if custom_field.type == 'file' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
             <label>{{ custom_field.name }}</label>
-            <br />
             <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% endif %}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           </div>
@@ -411,28 +410,29 @@
             <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
               {{ custom_field.name }}
             </label>
-            <div class="input-group date">
-              <input
-                type="date"
-                name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-                value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}"
-                placeholder="{{ custom_field.name }}"
-                step="1"
-                id="input-payment-custom-field{{ custom_field.custom_field_id }}"
-                data-date-format="YYYY-MM-DD"
-              />
-            </div>
+            <input
+              type="date"
+              name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+              value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}"
+              placeholder="{{ custom_field.name }}"
+              step="1"
+              id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+              data-date-format="YYYY-MM-DD"
+            />
           </div>
           {% endif %}
 
           {% if custom_field.type == 'time' %}
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
-            <div class="input-group time">
-              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
-              </div>
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <input 
+              type="time" 
+              name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+              value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" 
+              placeholder="{{ custom_field.name }}" 
+              data-date-format="HH:mm" 
+              id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+            />
           </div>
           {% endif %}
 
@@ -442,7 +442,15 @@
               {{ custom_field.name }}
             </label>
               <div class="input-group datetime">
-                <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+                <input 
+                  type="datetime-local"
+                  name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+                  value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% else %} {{ custom_field.value }} {% endif %}" 
+                  placeholder="{{ custom_field.name }}" 
+                  data-date-format="YYYY-MM-DD HH:mm" 
+                  id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+                  step="3600"
+                />
               </div>
             </div>
           {% endif %}
@@ -451,17 +459,19 @@
       {% endfor %}
     </fieldset>
     {{ captcha }}
-    <div class="form-control">
-      {% if shipping_required %}
-        {% if shipping_address %}
-          <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" checked="checked" />
-        {% else %}
-          <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" />
+    <div class="grid-footer">
+      <div class="form-control">
+        {% if shipping_required %}
+          {% if shipping_address %}
+            <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" checked="checked" />
+          {% else %}
+            <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" />
+          {% endif %}
+          <label for="shipping_address_guest"> {{ entry_shipping }}</label>
         {% endif %}
-        <label for="shipping_address_guest"> {{ entry_shipping }}</label>
-      {% endif %}
-    </div>
+      </div>
       <button type="submit" id="button-guest" form="guest_checkout" class="primary">{{ button_continue }}</button>
+    </div>
   </form>
 
 
@@ -586,23 +596,6 @@ $('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('c
 	}, 500);
 });
 </script> #}
-{# <script type="text/javascript"><!--
-$('.date').datetimepicker({
-	language: '{{ datepicker }}',
-	pickTime: false
-});
-
-$('.time').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: false
-});
-
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
-//--></script>  #}
 
 <script type="text/javascript"><!--
 // $('#collapse-payment-address select[name=\'country_id\']').on('change', function() {
