--- a/catalog/view/theme/helium/template/checkout/payment_method.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_method.twig
@@ -1,49 +1,41 @@
 {% if error_warning %}
   <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
 {% endif %}
+
 {% if payment_methods %}
   <form action="index.php?route=checkout/payment_method/save" method="post" id="payment_method">
-  <p>{{ text_payment_method }}</p>
-  {% for payment_method in payment_methods %}
-    <div class="form-control">
-      {% if payment_method.code == code or not code %}
-        {% set code = payment_method.code %}
-          <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
-          <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
-        {% else %}
-          <input type="radio" name="payment_method" value="{{ payment_method.code }}" id="{{ payment_method.code }}"/>
-          <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
-        {% endif %}
-        
-      {% if payment_method.terms %}
-        ({{ payment_method.terms }})
-      {% endif %} 
-    </div>
-  {% endfor %}
-{% endif %}
-  <p><strong>{{ text_comments }}</strong></p>
-  <p>
-    <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
-  </p>
-  {% if text_agree %}
-  <div class="buttons">
-    <div class="pull-right">{{ text_agree }}
-      {% if agree %}
-      <input type="checkbox" name="agree" value="1" checked="checked" />
-      {% else %}
-      <input type="checkbox" name="agree" value="1" />
+    <fieldset>
+      <legend>{{ text_payment_method }}</legend>
+        {% for payment_method in payment_methods %}
+          <div class="form-control">
+            {% if payment_method.code == code or not code %}
+              {% set code = payment_method.code %}
+                <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
+                <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
+              {% else %}
+                <input type="radio" name="payment_method" value="{{ payment_method.code }}" id="{{ payment_method.code }}"/>
+                <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
+              {% endif %}
+              
+            {% if payment_method.terms %}
+              ({{ payment_method.terms }})
+            {% endif %} 
+          </div>
+        {% endfor %}
+        <strong>{{ text_comments }}</strong>
+        <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
+    
+
+      {% if text_agree %}
+          {% if agree %}
+            <input type="checkbox" name="agree" value="1" checked="checked" />
+            <label for="agree">{{ text_agree }}</label>
+          {% else %}
+            <input type="checkbox" name="agree" value="1" />
+            <label for="agree">{{ text_agree }}</label>
+          {% endif %}
       {% endif %}
-      &nbsp;
       <button type="button" value="{{ button_continue }}" id="button-payment-method" class="primary">{{ button_continue }}</button>
-
-    </div>
-  </div>
-  {% else %}
-  <div class="buttons">
-    <div class="pull-right">
-      <button type="button" value="{{ button_continue }}" id="button-payment-method" class="primary">{{ button_continue }}</button>
-
-    </div>
-  </div>
-  {% endif %}
-</form>
+    </fieldset>
+  </form>
+{% endif %}
