UPD: Prettyfy code and comply to CSS classes

--- a/catalog/view/theme/helium/template/checkout/checkout.twig
+++ b/catalog/view/theme/helium/template/checkout/checkout.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 
-<main role="main" id="checkout-checkout">
+<main role="main" id="checkout">
   {% if error_warning %}
   <div class="alert danger"><i class="icon-alert"></i> {{ error_warning }}
     <button type="button" class="close" data-dismiss="alert">&times;</button>
