--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -1,5 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400&display=swap'); */
+
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: local('fonts/Roboto Condensed'), 
+		 local('fonts/RobotoCondensed-Regular'), 
+		 url('fonts/Robotocondensed.woff2') format('woff2'), 
+		 url('fonts/Robotocondensed.woff') format('woff'), 
+		 url('fonts/Robotocondensed.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
 
 :root {
 	--background-body:#ddd;
@@ -54,6 +66,7 @@ body {
 	max-width: 100%;
 	overflow-x: hidden;
 }
+
 
 aside#column-left {
 	background: transparent;
@@ -110,7 +123,7 @@ body > * {background:var(--background-blocks);padding: var(--padding);}
 #content-top{order:0}
 aside#column-left {order:1;max-width:max(20%, 360px);}
 main {flex:1;order:2;}
-aside#column-right {order: 4;max-width: max(20%, 360px);}
+aside#column-right {order:4; fmax-width: max(20%, 360px);}
 #content-bottom{order:4}
 header, footer {flex: 1 0 100%;}
 footer {column-gap: 1rem;order: 6;}
@@ -133,9 +146,7 @@ footer {column-gap: 1rem;order: 6;}
 
 .row {display: flex;flex-direction: row;flex-wrap: wrap;flex: 1 0 100%;align-items: center;}
 .flex {display:flex;}
-.flex-1 {flex: 1;}
-.flex-1-0-100 {flex: 1 0 100%;}
-.flex-1-0-50 {flex: 1 0 50%;}
+
 .justify-between{justify-content: space-between;}
 .j-center{justify-content: center;}
 .wrap {flex-wrap: wrap;}
@@ -302,6 +313,11 @@ span.product-flag {
     text-shadow: 0px 0px 3px #111;
     box-shadow: 0 0 5px #555;
     font-family: 'Roboto Condensed';
+}
+@media (prefers-reduced-motion: reduce) {
+	span.product-flag {
+	  opacity: 1;
+	}
 }
 span.product-flag i::before {
 	font-size: 1rem;
@@ -1451,13 +1467,6 @@ button.menu-back {
 }
 
 #main-menu ul {
-	/* position: absolute;
-	transform: translateX(100%);
-	top: 0;
-	left: 0;
-	overflow: hidden;
-	width: 100%;
-	height: 100%; */
 	transition: var(--transition);
 	background: #fff;
 	margin: 0;
@@ -1484,7 +1493,7 @@ button.menu-back {
 	position: absolute;
 	top: 0;
 	left: 0;
-	transform: translateX(100%);
+	transform: translateX(110%);
 }
 
 #main-menu ul:not([data-parent="0"]).open {
