--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -148,8 +148,8 @@
     {% if custom_field.type == 'select' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
+        {{ custom_field.name }}
+      </label>
       <div class="col-sm-10">
         <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -167,9 +167,8 @@
         <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
           <div class="form-control">
-            <label>
-              <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {{ custom_field_value.name }}</label>
+            <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+            <label>{{ custom_field_value.name }}</label>
           </div>
           {% endfor %}
         </div>
@@ -179,37 +178,26 @@
     {% if custom_field.type == 'checkbox' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
       <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
         <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
           <div class="form-control">
-            <label>
-              <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
-              {{ custom_field_value.name }}</label>
+            <label>{{ custom_field_value.name }}</label>
+            <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
           </div>
           {% endfor %}
-        </div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'text' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
-      <div class="col-sm-10">
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
     </div>
     {% endif %}
     {% if custom_field.type == 'textarea' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
-      <div class="col-sm-10">
-        <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
-      </div>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
     </div>
     {% endif %}
     {% if custom_field.type == 'file' %}
@@ -237,30 +225,31 @@
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
-      <div class="col-sm-10">
-        <div class="input-group time">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <input 
+        type="time" 
+        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+        value="{{ custom_field.value }}" 
+        placeholder="{{ custom_field.name }}" 
+        data-date-format="HH:mm" 
+        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
+        min="08:00" max="20:00"
+        step="3600"
+      />
     </div>
     {% endif %}
-    {% if custom_field.type == 'time' %}
+    {% if custom_field.type == 'datetime' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-              {{ custom_field.name }}
-            </label>
-      <div class="col-sm-10">
-        <div class="input-group datetime">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <input 
+        type="datetime-local"
+        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+        value="{{ custom_field.value }}"
+        placeholder="{{ custom_field.name }}" 
+        data-date-format="YYYY-MM-DD HH:mm" 
+        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
+        step="3600"
+      />
     </div>
     {% endif %}
     {% endfor %}
