--- a/catalog/view/theme/helium/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_method.twig
@@ -2,7 +2,7 @@
   <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
 {% endif %}
 {% if shipping_methods %}
-  <form action="index.php?route=checkout/shipping_method/save" method="post" id="shipping_method">
+  <form action="index.php?route=checkout/shipping_method/save" method="post" id="shipping_method" class="grid">
     <fieldset>
       <legend>{{ text_shipping_method }}</legend>
       {% for shipping_method in shipping_methods %}
@@ -23,9 +23,9 @@
           <div class="alert alert-danger alert-dismissible">{{ shipping_method.error }}</div>
         {% endif %}
       {% endfor %}
+      <p><strong>{{ text_comments }}</strong></p>
+      <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
+      <button type="submit" value="" id="button-shipping-method" class="primary">{{ button_continue }}</button>
     </fieldset>
-    <p><strong>{{ text_comments }}</strong></p>
-    <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
-    <button type="submit" value="" id="button-shipping-method" class="primary">{{ button_continue }}</button>
   </form>
 {% endif %}
