--- a/catalog/view/theme/helium/template/common/language.twig
+++ b/catalog/view/theme/helium/template/common/language.twig
@@ -1,20 +1,20 @@
 {% if languages|length > 1 %}
   <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-language">
-    <div class="btn-group">
       {# <button class="dropdown-toggle" data-toggle="dropdown" type="button"> #}
-      <button class="dropdown-toggle" data-target="languages" type="button">
-      {% for language in languages %}
-      {% if language.code == code %} 
-      <img width="40" height="27" loading="lazy" src="catalog/language/flags/{{ language.code }}.webp" alt="{{ language.name }}" title="{{ language.name }}">
-      {% endif %}
-      {% endfor %}
-      <span class="hidden-md"> {{ text_language }} </span></button>
-      <div data-openedby="languages" class="collapse dropdown-menu">
+      <button data-accordion-target="languages" type="button">
         {% for language in languages %}
-        <button title="{{ language.name }}" class="language-select" type="button" name="{{ language.code }}"><img width="40" height="27" loading="lazy" src="catalog/language/flags/{{ language.code }}.webp" alt="{{ language.name }}" /> {{ language.name }}</button>
+          {% if language.code == code %} 
+            <img width="40" height="27" loading="lazy" src="catalog/language/flags/{{ language.code }}.webp" alt="{{ language.name }}" title="{{ language.name }}">
+          {% endif %}
         {% endfor %}
+        <span class="hidden-md"> {{ text_language }} </span></button>
+      <div data-accordion="languages" id="language_select">
+        <div>
+          {% for language in languages %}
+            <button title="{{ language.name }}" class="language-select" type="button" name="{{ language.code }}"><img width="40" height="27" loading="lazy" src="catalog/language/flags/{{ language.code }}.webp" alt="{{ language.name }}" /> {{ language.name }}</button>
+          {% endfor %}
+        </div>
       </div>
-    </div>
     <input type="hidden" name="code" value="" />
     <input type="hidden" name="redirect" value="{{ redirect }}" />
   </form>
