--- a/catalog/view/theme/helium/template/checkout/guest.twig
+++ b/catalog/view/theme/helium/template/checkout/guest.twig
@@ -1,6 +1,6 @@
 
   <!-- Guest checkout -->
-  <form action="index.php?route=checkout/guest/save" method="post" id="guest_checkout" class="grid">
+  <form action="index.php?route=checkout/guest/save" method="post" id="guest_checkout">
     <fieldset id="account">
       <legend>{{ text_your_details }}</legend>
       <div class="form-group" {% if customer_groups|length <= 1 %} style="display: none" tabindex="-1"{% endif %}>
