--- a/catalog/view/theme/helium/template/checkout/login.twig
+++ b/catalog/view/theme/helium/template/checkout/login.twig
@@ -1,6 +1,5 @@
-  <div class="grid">
     <fieldset>
-      <h2>{{ text_new_customer }}</h2>
+      <legend>{{ text_new_customer }}</legend>
       <p>{{ text_checkout }}</p>
       <div class="form-control">
         {% if account == 'register' %}
@@ -26,7 +25,7 @@
       <button type="button" id="button-account" class="primary">{{ button_continue }}</button>
     </fieldset>
     <fieldset>
-      <h2>{{ text_returning_customer }}</h2>
+      <legend>{{ text_returning_customer }}</legend>
       <p>{{ text_i_am_returning_customer }}</p>
       <div class="form-group">
         <label for="input-email">{{ entry_email }}</label>
@@ -39,4 +38,3 @@
       <button type="button" id="button-login" class="primary">{{ button_login }}</button>
       <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
     </fieldset>
-  </div>
