--- a/catalog/view/theme/helium/template/product/category.twig
+++ b/catalog/view/theme/helium/template/product/category.twig
@@ -13,12 +13,9 @@
 <main role="main" id="main">
   <h1 class="uppercase">{{ heading_title }}</h1>
   {% if filter_links %}
-  <div class="scroll-x">
+  <div class="row popular-links">
     <span>{{ text_pupular_search }}</span>
     {% for filter_link in filter_links %}
-      <a class="button" title="{{ filter_link.name }} " href="{{filter_link.url}}">{{filter_link.name}}</a>
-      <a class="button" title="{{ filter_link.name }} " href="{{filter_link.url}}">{{filter_link.name}}</a>
-      <a class="button" title="{{ filter_link.name }} " href="{{filter_link.url}}">{{filter_link.name}}</a>
       <a class="button" title="{{ filter_link.name }} " href="{{filter_link.url}}">{{filter_link.name}}</a>
     {% endfor %}
   </div>
