UPD: Fix search so no gap between results and search input

--- a/catalog/view/theme/helium/template/common/search.twig
+++ b/catalog/view/theme/helium/template/common/search.twig
@@ -1,5 +1,7 @@
-<div id="search" class="input-group">
-  <input id="search-input" type="search" name="search" value="{{ search }}" placeholder="{{ text_search }}" />
-  <button type="button" aria-label="{{ text_search }}"><i class="icon-search"></i></button>
+<div id="search">
+  <div class="input-group">
+    <input id="search-input" type="search" name="search" value="{{ search }}" placeholder="{{ text_search }}" />
+    <button type="button" aria-label="{{ text_search }}"><i class="icon-search"></i></button>
+  </div>
   <div id="search-results"></div>
 </div>
