--- a/catalog/view/theme/helium/template/extension/module/blog_latest.twig
+++ b/catalog/view/theme/helium/template/extension/module/blog_latest.twig
@@ -1,7 +1,7 @@
 {% if articles %}
 <div class="module latest-articles">
   <span class="h3">{{ heading_title }}</span>
-  <div class="module-product-list">
+  <div class="scroll-x">
     {% for article in articles %} 
       {% include 'helium/template/blog/article_miniature.twig' with {article: article} %}
     {% endfor %}
