--- a/catalog/view/theme/helium/template/extension/module/viewed_products.twig
+++ b/catalog/view/theme/helium/template/extension/module/viewed_products.twig
@@ -1,7 +1,7 @@
 {% if products %}
   <div class="module viewed-products" data-block-name="{{ heading_title }}" data-icon="icon-eye" data-order="3">
     <span class="h3">{{ heading_title }}</span>
-    <div class="module-product-list">
+    <div class="scroll-x">
     {% for product in products %}
       {% include 'helium/template/product/product_miniature.twig' with {product: product} %}
     {% endfor %}   
