FIX: Now homepage complies to new design system

--- a/catalog/view/theme/helium/template/common/home.twig
+++ b/catalog/view/theme/helium/template/common/home.twig
@@ -1,6 +1,8 @@
 {{ header }}
-{{ content_top }}
-{{ content_bottom }}
+<main id="home">
+  {{ content_top }}
+  {{ content_bottom }}
+</main>
 {{ column_left }}
 {{ column_right }}
 {{ footer }}
